hphp/hack/test/typecheck/xhp/required_attr/syntax_error3.php.exp
File "syntax_error3.php", line 4, characters 33-33:
The 'required' or 'lateinit' keyword is expected here. (Parsing[1002])
