hphp/hack/test/typecheck/xhp/required_attr/syntax_error3.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class :a { attribute int a @foo required;}
